--- a/Parameters/Prepare contact matrix.ipynb
+++ b/Parameters/Prepare contact matrix.ipynb
@@ -145,6 +145,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -160,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
