--- a/todo.txt
+++ b/todo.txt
@@ -1,23 +1,19 @@
-add to webapp
 
-1) camp_params.csv remove computed parameters from csv to code
-2) move R code that generates params to python
-3) setup mongo + impl parameter store and model result store
-6) add async and progress webapp run
-7) better info page in model run in webapp
-8) add more complex charts to webapp
 
-TODO: add save csv specific to model
-#TODO: make specific to model
+) camp_params.csv remove computed parameters from csv to code
+) move R code that generates params to python
+) setup mongo + impl parameter store and model result store
+) add async and progress webapp run
+) better info page in model run in webapp
+) add more complex charts to webapp
+) add profile customization, convert to table form
+) TODO: add save csv specific to model
+) #TODO: make specific to model
 
-B1) move camp params generator to python (now in notebook)
-B2) parameter generator to populate into Mongo
+B) move camp params generator to python (now in notebook)
+B) parameter generator to populate into Mongo
 
 *) cleanup cm.initialise_parameters.py
-
-Questions:
-0) what data they interested. why std sol only plotted not whole range
-1) what is timing in params
 
 
 Completed/in progress:
@@ -27,4 +23,4 @@ cleanup data input / profile
 parallel model exec with dask
 azure integration
 console runner
-webapp *
+webapp
